--- a/Map/style.css
+++ b/Map/style.css
@@ -52,7 +52,65 @@ img {
 }
 
 
-/* Nominatim autocomplete search */
+
+.popup-fixed {
+  position: fixed;
+  top: auto;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  transform: none !important;
+  margin: 0;
+  border-radius: 0;
+}
+
+@media (min-width: 700px) {
+  .popup-fixed {
+    width: 250px;
+    height: 100% !important;
+    right: 0 !important;
+    left: auto !important;
+  }
+
+  .leaflet-popup-content-wrapper {
+    height: 100%;
+  }
+}
+
+.leaflet-popup-tip-container {
+  display: none;
+}
+
+.leaflet-popup-content-wrapper {
+  border-radius: 0;
+}
+
+.leaflet-popup-content {
+  font-size: 16px;
+}
+
+
+@keyframes border-pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgb(0, 0, 0);
+  }
+
+  70% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+.animation {
+  border-radius: 50%;
+  animation: border-pulse 1.5s infinite;
+}
+
+
+
 
 .auto-search-wrapper {
   position: relative;
@@ -297,4 +355,66 @@ li.loupe:before {
   width: 20px;
   left: 5px;
   top: 5px;
+}
+
+
+
+
+/* Popup marker */
+
+
+.popup-fixed {
+  position: fixed;
+  top: auto;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  transform: none !important;
+  margin: 0;
+  border-radius: 0;
+}
+
+@media (min-width: 700px) {
+  .popup-fixed {
+    width: 250px;
+    height: 100% !important;
+    right: 0 !important;
+    left: auto !important;
+  }
+
+  .leaflet-popup-content-wrapper {
+    height: 100%;
+  }
+}
+
+.leaflet-popup-tip-container {
+  display: none;
+}
+
+.leaflet-popup-content-wrapper {
+  border-radius: 0;
+}
+
+.leaflet-popup-content {
+  font-size: 16px;
+}
+
+
+@keyframes border-pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgb(0, 0, 0);
+  }
+
+  70% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+.animation {
+  border-radius: 50%;
+  animation: border-pulse 1.5s infinite;
 }
